--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
+        "html-react-parser": "^0.11.0",
         "trix": "^1.2.3"
     }
 }
